test/langtools/tools/javac/valhalla/lworld-values/CheckExtends.out
CheckExtends.java:8:14: compiler.err.concrete.supertype.for.inline.class: CheckExtends, java.lang.Object
1 error
